--- a/src/index.html
+++ b/src/index.html
@@ -48,13 +48,92 @@
     <!-- CSS, you gotta have style -->
     <link rel="stylesheet" href="css/styles.css">
 
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Raleway" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous">
+
     <!-- Modernizer, cause some browsers suck -->
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 
     </head>
-  <body>
 
+  <body>
+    <div class="wraper">
+        <div class="content">
+            <header>
+                <a href="index.html" class="logo"><img src="img/Logo.png" alt="logo"></a>
+                <nav>
+                    <ul>
+                        <li><a href="#">Boards</a></li>
+                        <li><a href="#">Accessories</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">Technology</a></li>
+                        <li><a href="#">Team</a></li>
+                        <li><a href="#">Dealers</a></li>
+                    </ul>
+                </nav>
+                <div class="social">
+                    <a href="#"><img src="img/Facebook.png" alt=""></a>
+                    <a href="#"><img src="img/Instagram.png" alt=""></a>
+                    <a href="#"><img src="img/Mail.png" alt=""></a>
+                </div>
+            </header>
+
+            <h1>Ride every wave as if it's your last<br><span>We love the motion of the ocean</span></h1>
+
+            <div class="board">
+                <div class="img">
+                    <img src="img/Board.png" alt="board">
+                </div>
+                <div class="littleImg">
+                    <img src="img/board_m_1.png" class="active" alt="" style="border: 1px solid #cbcbcb">
+                    <img src="img/board_m_2.png" alt="">
+                    <img src="img/board_m_3.png" alt="">
+                    <img src="img/board_m_4.png" alt="">
+                </div>
+                <div class="info">
+                    <h2>JR Surfboards The Donny Stoker <br> Yellow/Green Rail Fade</h2>
+                    <p><i class="fas fa-star "></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="far fa-star"></i> (52)
+                    </p>
+                    <div class="tabs">
+                        <input type="radio" name="tabs" id="tab1" checked>
+                        <label for="tab1">Description</label>
+
+                        <input type="radio" name="tabs" id="tab2">
+                        <label for="tab2">Features</label>
+
+                        <input type="radio" name="tabs" id="tab3">
+                        <label for="tab3">Dimensions</label>
+
+                        <section id="content-tab1">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia laborum totam hic, non unde reprehenderit accusamus deleniti sunt rem sed?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam reprehenderit earum ut deleniti nostrum ipsa omnis soluta harum, necessitatibus, aut? </p>
+                        </section>
+
+                        <section id="content-tab2">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, corporis. </p>
+                        </section>
+
+                        <section id="content-tab3">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim, culpa. </p>
+                        </section>
+
+                    </div>
+                    
+                    <div class="bottom-info">
+                        <p class="price">$499.99</p>
+                        <a href="#" class="button">Buy now</a>
+                    </div>
+
+                    <a href="#" class="view">View all boards</a>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
     <script src="js/main.js"></script>
