--- a/src/index.html
+++ b/src/index.html
@@ -61,39 +61,39 @@
   <body>
     <div class="wraper">
         <div class="content">
-            <header>
-                <a href="index.html" class="logo"><img src="img/Logo.png" alt="logo"></a>
+            <header class="header">
+                <a href="index.html" class="logo"><img src="img/Logo.png" alt="surfing-logo"></a>
                 <nav>
-                    <ul>
-                        <li><a href="#">Boards</a></li>
-                        <li><a href="#">Accessories</a></li>
-                        <li><a href="#">Blog</a></li>
-                        <li><a href="#">Technology</a></li>
-                        <li><a href="#">Team</a></li>
-                        <li><a href="#">Dealers</a></li>
+                    <ul class="row">
+                        <li><a href="#" class="nav-link link-padding">Boards</a></li>
+                        <li><a href="#" class="nav-link link-padding">Accessories</a></li>
+                        <li><a href="#" class="nav-link link-padding">Blog</a></li>
+                        <li><a href="#" class="nav-link link-padding">Technology</a></li>
+                        <li><a href="#" class="nav-link link-padding">Team</a></li>
+                        <li><a href="#" class="nav-link link-padding">Dealers</a></li>
                     </ul>
                 </nav>
                 <div class="social">
-                    <a href="#"><img src="img/Facebook.png" alt=""></a>
-                    <a href="#"><img src="img/Instagram.png" alt=""></a>
-                    <a href="#"><img src="img/Mail.png" alt=""></a>
+                    <a href="#" class="social-links"><img src="img/Logo_facebook.png" alt="facebook-link"></a>
+                    <a href="#" class="social-links"><img src="img/Logo_inst.png" alt="instagram-link"></a>
+                    <a href="#" class="social-links"><img src="img/Logo_gmail.png" alt="google-link"></a>
                 </div>
             </header>
 
-            <h1>Ride every wave as if it's your last<br><span>We love the motion of the ocean</span></h1>
+            <h1 class="h1-first-screen">Ride every wave as if it's your last<br><span>We love the motion of the ocean</span></h1>
 
             <div class="board">
                 <div class="img">
                     <img src="img/Board.png" alt="board">
                 </div>
                 <div class="littleImg">
-                    <img src="img/board_m_1.png" class="active" alt="" style="border: 1px solid #cbcbcb">
-                    <img src="img/board_m_2.png" alt="">
-                    <img src="img/board_m_3.png" alt="">
-                    <img src="img/board_m_4.png" alt="">
+                    <img src="img/board_m_1.png" class="img-board-view active" alt="board-view">
+                    <img src="img/board_m_2.png" class="img-board-view" alt="board-view">
+                    <img src="img/board_m_3.png" class="img-board-view" alt="board-view">
+                    <img src="img/board_m_4.png" class="img-board-view" alt="board-view">
                 </div>
                 <div class="info">
-                    <h2>JR Surfboards The Donny Stoker <br> Yellow/Green Rail Fade</h2>
+                    <h2 class="common-h2">JR Surfboards The Donny Stoker <br> Yellow/Green Rail Fade</h2>
                     <p><i class="fas fa-star "></i>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -126,10 +126,10 @@
                     
                     <div class="bottom-info">
                         <p class="price">$499.99</p>
-                        <a href="#" class="button">Buy now</a>
+                        <a href="#" class="button-link">Buy now</a>
                     </div>
 
-                    <a href="#" class="view">View all boards</a>
+                    <a href="#" class="underline-link">View all boards</a>
                 </div>
             </div>
         </div>
