--- a/src/index.html
+++ b/src/index.html
@@ -94,12 +94,40 @@
                 </div>
                 <div class="info">
                     <h2 class="common-h2">JR Surfboards The Donny Stoker <br> Yellow/Green Rail Fade</h2>
-                    <p><i class="fas fa-star "></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="far fa-star"></i> (52)
-                    </p>
+                    <fieldset class="stars">
+
+                        <input type="radio" id="star-5" name="rating" class="stars-i">
+                        <label for="star-5" class="full stars-l" title="Awesome"></label>
+
+                        <input type="radio" id="star-4.5" name="rating" class="stars-i">
+                        <label for="star-4.5" class="half stars-l" title="Pretty good"></label>
+
+                        <input type="radio" id="star-4" name="rating" class="stars-i">
+                        <label for="star-4" class="full stars-l" title="Pretty good"></label>
+
+                        <input type="radio" id="star-3.5" name="rating" class="stars-i">
+                        <label for="star-3.5" class="half stars-l" title="Meh"></label>
+
+                        <input type="radio" id="star-3" name="rating" class="stars-i">
+                        <label for="star-3" class="full stars-l" title="Meh"></label>
+
+                        <input type="radio" id="star-2.5" name="rating" class="stars-i">
+                        <label for="star-2.5" class="half stars-l" title="Kinda bad"></label>
+
+                        <input type="radio" id="star-2" name="rating" class="stars-i">
+                        <label for="star-2" class="full stars-l" title="Kinda bad"></label>
+
+                        <input type="radio" id="star-1.5" name="rating" class="stars-i">
+                        <label for="star-1.5" class="half stars-l" title="Terrible"></label>
+
+                        <input type="radio" id="star-1" name="rating" class="stars-i">
+                        <label for="star-1" class="full stars-l" title="Terrible"></label>
+
+                        <input type="radio" id="star-0.5" name="rating" class="stars-i">
+                        <label for="star-0.5" class="half stars-l" title="Terrible"></label>
+
+                    </fieldset>
+
                     <div class="tabs">
                         <input type="radio" name="tabs" id="tab1" checked>
                         <label for="tab1">Description</label>
@@ -110,17 +138,17 @@
                         <input type="radio" name="tabs" id="tab3">
                         <label for="tab3">Dimensions</label>
 
-                        <section id="content-tab1">
+                        <div id="content-tab1">
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia laborum totam hic, non unde reprehenderit accusamus deleniti sunt rem sed?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam reprehenderit earum ut deleniti nostrum ipsa omnis soluta harum, necessitatibus, aut? </p>
-                        </section>
+                        </div>
 
-                        <section id="content-tab2">
+                        <div id="content-tab2">
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, corporis. </p>
-                        </section>
+                        </div>
 
-                        <section id="content-tab3">
+                        <div id="content-tab3">
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim, culpa. </p>
-                        </section>
+                        </div>
 
                     </div>
                     
@@ -132,9 +160,165 @@
                     <a href="#" class="underline-link">View all boards</a>
                 </div>
             </div>
+
         </div>
     </div>
 
+    <div class="about-wraper">
+        <div class="about">
+            <div class="info-about">
+                <div></div>
+                <div class="info-about-text">
+                    <h3 class="header-cursive">We are surfers co. <br> ×</h3>
+                    <p class="about-cursive" >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto consectetur dolorum facere illum sit. Beatae ea fuga fugiat id magnam magni minus mollitia nam placeat, quam quo quod, sapiente tempore?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus harum ipsam natus repudiandae.</p>
+                    <a href="#" class="underline-link">Read more</a>
+                </div>
+            </div>
+            <div class="serfer">
+                <!--<img src="img/serfer-video.png" alt="serfer">-->
+                <img src="img/Play-icon.png" class="play" alt="play icon">
+            </div>
+
+        </div>
+    </div>
+
+    <div class="content">
+        <h2 class="h2-team">Our team</h2>
+        <div class="team-wraper">
+
+            <div class="arrow-wraper">
+                <div class="arrow">
+                    <i class="fas fa-arrow-left"></i>
+                </div>
+            </div>
+
+            <div class="team-member">
+                <img src="img/team-card-1.png" alt="team-member" class="team-member-img">
+                <p class="team-member-name">Taj Burrow</p>
+                <p class="team-member-nick">@tajamos</p>
+                <img src="img/wave.png" alt="wave" class="wave">
+                <p class="team-member-place">Yalingup, Australia</p>
+            </div>
+            <div class="team-member">
+                <img src="img/team-card-2.png" alt="team-member" class="team-member-img">
+                <p class="team-member-name">Malia Manuel</p>
+                <p class="team-member-nick">@maliamanuel</p>
+                <img src="img/wave.png" alt="wave" class="wave">
+                <p class="team-member-place">Wailua, Hi</p>
+            </div>
+            <div class="team-member">
+                <img src="img/team-card-3.png" alt="team-member" class="team-member-img">
+                <p class="team-member-name">Ian Wallsh</p>
+                <p class="team-member-nick">@ianwalsh</p>
+                <img src="img/wave.png" alt="wave" class="wave">
+                <p class="team-member-place">Maui, Hi</p>
+            </div>
+            <div class="team-member">
+                <img src="img/team-card-4.png" alt="team-member" class="team-member-img">
+                <p class="team-member-name">Macy Callghan</p>
+                <p class="team-member-nick">@macyjancallaghan</p>
+                <img src="img/wave.png" alt="wave" class="wave">
+                <p class="team-member-place">San Clemento, CA</p>
+            </div>
+
+            <div class="arrow-wraper">
+                <div class="arrow">
+                    <i class="fas fa-arrow-right"></i>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="latest-updates content">
+        <h3 class="header-cursive">Latest Updates <br> ×</h3>
+        <div class="wraper-updates-blocks">
+            <div class="updates-block">
+                <img src="img/latest-updates-1.png" alt="latest update">
+                <p class="updates-text"> Elie Turner and Jobe Harris have taken out the 2016 British National Surf Championships</p>
+            </div>
+            <div class="updates-block">
+                <img src="img/lates-updates-2.png" alt="latest update">
+                <p class="updates-text">A large group of surfers invaded the coast of La Jolla Shores in California with a single goal in mind</p>
+            </div>
+            <div class="updates-block">
+                <img src="img/lates-updates-3.png" alt="latest update">
+                <p class="updates-text">Surfboards are constantly evolving and there are multiple board designs for a broad range of environments</p>
+            </div>
+        </div>
+
+        <p class="button-wraper">
+            <a href="#" class="button-link">View all posts</a>
+        </p>
+
+    </div>
+
+    <footer class="footer">
+        <div class="footer-top content">
+            <div class="landscape-wraper">
+                <img src="img/inst-1.png" alt="landscape" class="landscape">
+                <img src="img/inst-2.png" alt="landscape" class="landscape">
+                <img src="img/inst-3.png" alt="landscape" class="landscape">
+                <img src="img/inst-4.png" alt="landscape" class="landscape">
+                <a href="#" class="follow"><span class="camera"><i class="fas fa-camera-retro"></i> Follow us</span> @surfersco</a>
+                <p class="copyright">© 2017 Surfers Co · Design by @lucaalco</p>
+            </div>
+
+            <div class="facebook-wraper">
+                <div class="facebook">
+                    <p class="p-facebook">facebook</p>
+                    <div class="from-facebook">
+                        <div class="f-img">
+                            <a href="#">
+                                <img src="img/Profile-photo.png" alt="facebook profile" class="f-logo">
+                                <p class="f-profile-name">Surfers Co. <br> <span class="likes-number">52 000 likes</span></p>
+                            </a>
+
+                            <div class="f-buttons-wraper">
+                                <a href="#" class="f-button f-button-like">&nbsp Like Page</a>
+                                <a href="#" class="f-button f-button-share">&nbsp Share</a>
+                            </div>
+
+                        </div>
+
+                        <div class="friends-wraper">
+                            <p class="friends-liked">You and 8 friends like this</p>
+                            <div class="friends">
+                                <img src="img/friend-1.png" alt="facebook-friend" class="friend">
+                                <img src="img/friend-2.png" alt="facebook-friend" class="friend">
+                                <img src="img/friend-3.png" alt="facebook-friend" class="friend">
+                                <img src="img/friend-4.png" alt="facebook-friend" class="friend">
+                                <img src="img/friend-5.png" alt="facebook-friend" class="friend">
+                                <img src="img/friend-6.png" alt="facebook-friend" class="friend">
+                                <img src="img/friend-7.png" alt="facebook-friend" class="friend">
+                                <img src="img/friend-8.png" alt="facebook-friend" class="friend">
+                                <img src="img/friend-9.png" alt="facebook-friend" class="friend">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <ul class="ul-wave">
+                    <li><a class="wave-link" href="#">About</a></li>
+                    <li><a class="wave-link" href="#">Technology</a></li>
+                    <li><a class="wave-link" href="#">Boards</a></li>
+                    <li><a class="wave-link" href="#">Team</a></li>
+                    <li><a class="wave-link" href="#">Accessories</a></li>
+                    <li><a class="wave-link" href="#">Delivers</a></li>
+                    <li><a class="wave-link" href="#">Blog</a></li>
+                    <li><a class="wave-link" href="#">Contact us</a></li>
+                </ul>
+
+            </div>
+
+            <form class="subscribe">
+                <p class="subscribe-p">Subscribe to our newsletter</p>
+                <input class="subscribe-i" type="text" placeholder="Your e-mail">
+                <button class="submit" type="submit"><i class="fas fa-arrow-right"></i></button>
+            </form>
+
+        </div>
+        <div class="footer-black"></div>
+
+    </footer>
 
     <script src="js/main.js"></script>
   </body>
